...
              name={focused ? 'inbox' : 'inbox-outline'}
            />
          ),
        }}
      />
      <MaterialBottomTabs.Screen
        name="calendar"
        options={{
          tabBarLabel: 'calendar',
          tabBarIcon: ({color, focused}) => (
            <MaterialCommunityIcons
              color={color}
              size={24}
...
          ),
        }}
      />
      <MaterialBottomTabs.Screen
        name="(settings)"
        options={{
          tabBarLabel: 'settings',
          tabBarIcon: ({color, focused}) => (
            <MaterialCommunityIcons
              color={color}
              size={24}
              name={focused ? 'cog' : 'cog-outline'}
            />
...
