...
        renderSectionHeader={renderSectionHeader}
        renderItem={renderItem}
        contentContainerStyle={styles.contentContainer}
        ListHeaderComponent={() => (
          <View style={styles.header}>
            <Card
              testID="profile-card"
              onPress={() =>
                router.push({
                  pathname: '/details',
                  params: {variable: JSON.stringify(profile)},
                })
              }>
...
