...
  return (
    <Host>
      <View style={[styles.container, {backgroundColor: colors.background}]}>
        <Appbar.Header>
          <Appbar.Content title={dayjs(selectedDate).format('MMM YYYY')} />
          <Appbar.Action
            testID="mode-menu"
            icon={
              mode === 'month'
                ? 'calendar-month'
                : mode === 'day'
                  ? 'view-day'
                  : mode === 'week'
...
