...
  const handleAddSubTodo = async (parent_id: string) => {
    if (!parent_id) return;
    setParentId(parent_id);
    setTimeout(() => showAddTodoModal(), 100);
  };

  const handleSubmitEditing = async (newTodo: Todo, selectedSection = 'Inbox') => {
    if (!newTodo) return;

    try {
      // Trim the selected section name
      const trimmedSection = selectedSection.trim();

...

  const renderPlaceholder = () => <DraggableItemPlaceholder />;
  const renderEmptyComponent = (item: SectionWithTodos) =>
    item.key === 'new_section' ? (
      <View style={styles.centerContainer}>
        <Button
          testID="add-section-button"
          mode="contained-tonal"
          icon={'plus'}
          onPress={showAddSectionModal}>
          Create New Section
        </Button>
      </View>
...
  return (
    <View style={[styles.container, {backgroundColor: colors.background}]} onLayout={handleLayout}>
      <Appbar.Header mode="small" elevated>
        <Appbar.Content title="Inbox" style={{flex: 1}} titleStyle={{margin: 0, padding: 0}} />
        <View style={styles.searchContainer}>
          <AutoCompleteDropDown
            testID="autocomplete-dropdown"
            data={autoCompleteItems}
            onSelectItem={handleSelectItem}
          />
        </View>
        <Menu
          anchorPosition="bottom"
...
              flex: 1,
              justifyContent: 'flex-end',
              paddingBottom: 50,
            }}>
            <View style={[styles.modalContent, {backgroundColor: colors.surface}]}>
              <TextInput
                testID="section-name-input"
                style={styles.textInput}
                label="Section Name"
                value={newSectionName}
                onChangeText={setNewSectionName}
                error={isSectionNameInvalid}
                autoFocus
                right={
                  <TextInput.Icon
                    testID="section-name-send-button"
                    icon="send"
                    color={isSectionNameInvalid ? colors.error : colors.primary}
                    disabled={isSectionNameInvalid}
                    onPress={selectedSection ? handleUpdateSection : handleAddSection}
                  />
                }
...
