...
                onSubmitEditing={handleSubmitEditing}
                style={[styles.textInput, {color: colors.onSurface}]}
                blurOnSubmit={false}>
                <Text style={[styles.highlightContainer]}>{highlightedText}</Text>
              </TextInput>
              <IconButton
                id="send-button"
                testID="send-button"
                icon="send"
                size={24}
                iconColor={todoName.trim() ? colors.primary : colors.surfaceDisabled}
                disabled={!todoName.trim()}
                onPress={handleSubmitEditing}
...
