# changePassword.yaml

appId: com.barnabas243.CalenTrack
---
- launchApp

- tapOn: 'settings.*'
- tapOn: 'Change Password'

- inputText: 'oldpassword'
- tapOn: 'New Password'
- inputText: 'newpassword'

- tapOn: 'Confirm Password'
- inputText: 'newpassword'

- tapOn: 'Change Password'

- assertVisible: 'Password changed successfully!'
- takeScreenshot: ChangePassword
