# profileUpdate.yaml

appId: com.barnabas243.CalenTrack
---
- launchApp

- tapOn: 'settings.*'
- tapOn: 'profile-card'

- assertVisible:
    id: 'avatar-image'
    id: 'email-input'
    id: 'full-name-input'
    id: 'save-button'

# change full name
- tapOn: 'full-name-input'
- inputText: 'Test User'

- tapOn: 'save-button'

- assertVisible: 'Test User'

# change email
- tapOn: 'profile-card'
- tapOn: 'email-input'

- inputText: 'testUser@gmail.com'

- tapOn: 'save-button'

- assertVisible: 'testUser@gmail.com'

- takeScreenshot: ProfileUpdate