# weekCalendar.yaml

AppId: com.barnabas243.CalenTrack
---
- launchApp

- tapOn: 'calendar.*'
- tapOn: 'mode-menu'

- assertVisible: 'mode-week'

- tapOn: 'mode-week'
- takeScreenshot: WeekCalendar
