# search.yaml

AppId: com.barnabas243.CalenTrack
---
- launchApp

- tapOn: 'Inbox.*'
- tapOn: 'autocomplete-dropdown'

- inputText: 'new-section'
- assertNotVisible: 'No Results found'

- tapOn: 'new-section'
- takeScreenshot: SearchSection
