# themeChange.yaml

appId: com.barnabas243.CalenTrack
---
- launchApp

- tapOn: 'settings.*'
- tapOn: 'Theme'

# assuming the theme is dark
- tapOn: 'light'
- takeScreenshot: themeLight

# change to dark theme

- tapOn: 'dark'
- takeScreenshot: themeDark
